--- a/public/index.html
+++ b/public/index.html
@@ -118,9 +118,9 @@
 						</div>
 					</section>
 					<!-- Three -->
-					<section id="three" class="spotlight style3 left">
-						<div id="fit main right">
-							<div id="map-canvas"></div>
+			<!-- 		<section id="three" class="spotlight style3 left">
+						<div class="fit main bottom">
+							<div id="map-canvas" style="height:100px;width:100px;"></div>
 						</div>
 						<div class="content">
 							<header>
@@ -134,6 +134,25 @@
 
 							<ul class="actions">
 								<li><a href="" ng-click="" class="button">Get Cash?</a></li>
+							</ul>
+							
+						</div>
+						<a href="#four" class="goto-next scrolly">Summary</a>
+					</section> -->
+					<section id="three" class="spotlight style3 left">
+						<div class="content">
+							<div id="map-canvas" style="top:10px;left:495px;width:850px;height:600px;position:absolute;margin:5 auto;"></div>
+							<header>
+								<h2>Your Current Route Map</h2>						
+							</header>
+							<div id="qrcode"></div>
+							<div id="customer"></div>
+							<ul class="actions">
+								<li><a href="" ng-click="" class="button">Change restaurants?</a></li>
+							</ul>
+
+							<ul class="actions">
+								<li><a href="" ng-click="getCash()" class="button">Get Cash?</a></li>
 							</ul>
 							
 						</div>
